# Twitter-Pipeline-

./: .gitignore  LICENSE  README.md  pyproject.toml  twiiter_etl_with_airflow.pem  twitter_etl_airflow.pem
dags/: dag_for_twitter_etl.py
src/: twitter_ETL.py
